<resources>
    <string name="app_name">Location Offers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="commerce">Commerce</string>
    <string name="user">User</string>

    <string name="hello_comerce_fragment">Hello comerce fragment</string>
    <string name="hello_user_fragment">Hello user fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="new_message">New message</string>
    <string name="edit_message">Edit message</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="accept">Accept</string>

    <string name="welcome">Welcome </string>
    <string name="login_failed">Login Failed</string>
    <string name="login_input_error">Mail and pass cannot be empty</string>
    <string name="signed_in_message">Signed in as </string>
    <string name="login_user_mode">Select user mode</string>
    <string name="login_error_message">Authentication failed</string>

    <string name="register_failed">Register Failed</string>
    <string name="register_successful">Register Successful</string>

    <string name="message_db_ok">Message inserted successfully</string>
    <string name="field_error">All fields are required</string>

    <string name="messages">Messages</string>
    <string name="trash">Trash</string>
    <string name="help">Help</string>
    <string name="select_interests">Select Interests</string>

    <string name="start_message_detection">Start Message Detection</string>
    <string name="stop_message_detection">Stop Message Detection</string>
    <string name="service_started">Service Started</string>
    <string name="service_stopped">Service Stopped</string>

    <string name="logout">Log out</string>
    <string name="exit">Exit</string>

    <string name="double_back">Click BACK again to exit</string>
    <string name="delete">Delete</string>

    <string name="network_error">No internet. Check your network connection or your settings.</string>
    <string name="lost_connection">Lost connection.</string>

    <string name="download_count">Download count:</string>
    <string name="exchange_count">Exchange count:</string>
    <string name="publish_date">Publish date:</string>

    <string name="TYPE_ACCOUNTING">Accounting</string>
    <string name="TYPE_AIRPORT">Airport</string>
    <string name="TYPE_AMUSEMENT_PARK">Amusement Park</string>
    <string name="TYPE_AQUARIUM">Aquarium</string>
    <string name="TYPE_ART_GALLERY">Art Gallery</string>
    <string name="TYPE_ATM">ATM</string>
    <string name="TYPE_BAKERY">Bakery</string>
    <string name="TYPE_BANK">Bank</string>
    <string name="TYPE_BAR">BAR</string>
    <string name="TYPE_BEAUTY_SALON">Beauty Salon</string>
    <string name="TYPE_BICYCLE_STORE">Bicycle Store</string>
    <string name="TYPE_BOOK_STORE">Book Store</string>
    <string name="TYPE_BOWLING_ALLEY">Bowling Alley</string>
    <string name="TYPE_BUS_STATION">Bus Station</string>
    <string name="TYPE_CAFE">Cafe</string>
    <string name="TYPE_CAMPGROUND">Campground</string>
    <string name="TYPE_CAR_DEALER">Car Dealer</string>
    <string name="TYPE_CAR_RENTAL">Car Rental</string>
    <string name="TYPE_CAR_REPAIR">Car Repair</string>
    <string name="TYPE_CAR_WASH">Car Wash</string>
    <string name="TYPE_CASINO">Casino</string>
    <string name="TYPE_CEMETERY">Cemetery</string>
    <string name="TYPE_CHURCH">Church</string>
    <string name="TYPE_CITY_HALL">City Hall</string>
    <string name="TYPE_CLOTHING_STORE">Clothing Store</string>
    <string name="TYPE_CONVENIENCE_STORE">Convenience Store</string>
    <string name="TYPE_COURTHOUSE">Courthouse</string>
    <string name="TYPE_DENTIST">Dentist</string>
    <string name="TYPE_DEPARTMENT_STORE">Department Store</string>
    <string name="TYPE_DOCTOR">Doctor</string>
    <string name="TYPE_ELECTRICIAN">Electrician</string>
    <string name="TYPE_ELECTRONICS_STORE">Electronics Store</string>
    <string name="TYPE_EMBASSY">Embassy</string>
    <string name="TYPE_ESTABLISHMENT">Establishment</string>
    <string name="TYPE_FINANCE">Finance</string>
    <string name="TYPE_FIRE_STATION">Fire Station</string>
    <string name="TYPE_FLORIST">Florist</string>
    <string name="TYPE_FOOD">Food</string>
    <string name="TYPE_FUNERAL_HOME">Funeral Home</string>
    <string name="TYPE_FURNITURE_STORE">Furniture_Store</string>
    <string name="TYPE_GAS_STATION">Gas Station</string>
    <string name="TYPE_GENERAL_CONTRACTOR">General Contractor</string>
    <string name="TYPE_GROCERY_OR_SUPERMARKET">Grocery or Supermarket</string>
    <string name="TYPE_GYM">Gym</string>
    <string name="TYPE_HAIR_CARE">Hair Care</string>
    <string name="TYPE_HARDWARE_STORE">Hardware Store</string>
    <string name="TYPE_HEALTH">Health</string>
    <string name="TYPE_HINDU_TEMPLE">Hindu Temple</string>
    <string name="TYPE_HOME_GOODS_STORE">Home Goods Store</string>
    <string name="TYPE_HOSPITAL">Hospital</string>
    <string name="TYPE_INSURANCE_AGENCY">Insurance Agency</string>
    <string name="TYPE_JEWELRY_STORE">Jewelry Store</string>
    <string name="TYPE_LAUNDRY">Laundry</string>
    <string name="TYPE_LAWYER">Lawyer</string>
    <string name="TYPE_LIBRARY">Library</string>
    <string name="TYPE_LIQUOR_STORE">Liquor Store</string>
    <string name="TYPE_LOCAL_GOVERNMENT_OFFICE">Government Office</string>
    <string name="TYPE_LOCKSMITH">Locksmith</string>
    <string name="TYPE_LODGING">Lodging</string>
    <string name="TYPE_MEAL_DELIVERY">Meal Delivery</string>
    <string name="TYPE_MEAL_TAKEAWAY">Meal Takeaway</string>
    <string name="TYPE_MOSQUE">Mosque</string>
    <string name="TYPE_MOVIE_RENTAL">Movie Rental</string>
    <string name="TYPE_MOVIE_THEATER">Cinema</string>
    <string name="TYPE_MOVING_COMPANY">Moving Company</string>
    <string name="TYPE_MUSEUM">Museum</string>
    <string name="TYPE_NIGHT_CLUB">Night Club</string>
    <string name="TYPE_OTHER">Other</string>
    <string name="TYPE_PAER">Paer</string>
    <string name="TYPE_PARK">Park</string>
    <string name="TYPE_PARKING">Parking</string>
    <string name="TYPE_PET_STORE">Pet Store</string>
    <string name="TYPE_PHARMACY">Pharmacy</string>
    <string name="TYPE_PHYSIOTHERAPIST">Physiotherapist</string>
    <string name="TYPE_PLACE_OF_WORSHIP">Place of worship</string>
    <string name="TYPE_PLUMBER">Plumber</string>
    <string name="TYPE_POINT_OF_INTEREST">Point of interest</string>
    <string name="TYPE_POLICE">Police</string>
    <string name="TYPE_POST_OFFICE">Post Office</string>
    <string name="TYPE_PREMISE">Premise</string>
    <string name="TYPE_REAL_ESTATE_AGENCY">Real Estate Agency</string>
    <string name="TYPE_RESTAURANT">Restaurant</string>
    <string name="TYPE_ROOFING_CONTRACTOR">Roofing Contractor</string>
    <string name="TYPE_ROOM">Room</string>
    <string name="TYPE_RV_PARK">RV Park</string>
    <string name="TYPE_SCHOOL">School</string>
    <string name="TYPE_SHOE_STORE">Shoe Store</string>
    <string name="TYPE_SHOPPING_MALL">Shopping Mall</string>
    <string name="TYPE_SPA">SPA</string>
    <string name="TYPE_STADIUM">Stadium</string>
    <string name="TYPE_STORAGE">Storage</string>
    <string name="TYPE_STORE">Store</string>
    <string name="TYPE_SUBWAY_STATION">Subway Station</string>
    <string name="TYPE_SYNAGOGUE">Synagogue</string>
    <string name="TYPE_TAXI_STAND">Taxi Stand</string>
    <string name="TYPE_TRAIN_STATION">Train Station</string>
    <string name="TYPE_TRAVEL_AGENCY">Travel Agency</string>
    <string name="TYPE_UNIVERSITY">University</string>
    <string name="TYPE_VETERINARY_CARE">Veterinary Care</string>
    <string name="TYPE_ZOO">Zoo</string>

    <string name="MESSAGE_ALREADY_USED">This message has been used yet</string>
    <string name="MESSAGE_NOT_USED">This message is valid ;)</string>
    <string name="MESSAGE_INVALID">INVALID CODE</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_display_name">Username</string>
    <string name="pref_title_display_pass">Password</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_download_mode">Choose download data mode</string>

</resources>
